--- a/notebooks/_static/style.html
+++ b/notebooks/_static/style.html
@@ -11,12 +11,15 @@
     }
 }
 
+#bd-toc-nav {
+    background-color: rgb(0 0 0 / 0);
+}
+
 
 :is(.bd-container, .myst) :is(p, ul) {
     margin-bottom: 0.5em !important;
     margin-top: 0.5em !important;
 }
-
 .myst :where(:is(p, ul)):not(:where([class~=not-prose], [class~=not-prose] *)) {
     margin-bottom: 0.5em !important;
     margin-top: 0.5em !important;
@@ -27,9 +30,16 @@
 :is(.bd-container, .myst) p:has(+ :is(ol, ul) {
     margin-bottom: initial !important;
 }
+:is(.bd-container, .myst) li>ul {
+    margin-top: 0.1em !important;
+}
+
 
 div.cell div.cell_output .output pre {
     background-color: #f8fff8;
+}
+div.prompt.input_prompt, div.prompt.output_prompt {
+    opacity: 0.6;
 }
 
 
