reviewed config + adopt my-book.js

--- a/notebooks/_static/style.html
+++ b/notebooks/_static/style.html
@@ -7,7 +7,8 @@
         max-width: initial !important;
     }
     .navbar-brand.logo>img {
-        max-width: 170px;
+        max-width: 250px;
+        max-height: 170px;
     }
 }
 
@@ -76,6 +77,10 @@ div.prompt.input_prompt, div.prompt.output_prompt {
 .admonition-x-small {
     font-size: x-small;
     line-height: 1.2;
+}
+
+.corrige {
+    background-image: radial-gradient(#BFF6C3, #E0FBE2);
 }
  .memory {
     font-size: 180%;
